# opencog

./: CMakeLists.txt
lib/: FindBothPython.cmake
opencog/cogserver/modules/python/: CMakeLists.txt  PyMindAgent.cc  PyRequest.cc  PythonModule.cc
opencog/cogserver/shell/: CMakeLists.txt
opencog/cython/opencog/: CMakeLists.txt  agent_finder.pyx  cogserver.pxd
opencog/python/: CMakeLists.txt
opencog/visualization/gtk-visualizer/: main.cpp
